# restauant-picker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  cdk.json  pyproject.toml
cdk/: cdk_stack.py  deploy_pipeline_stack.py  hitcounter.py  restaurant_picker_stack.py  restaurant_store.py  util.py
lambda/: hitcount.py  restaurant_poll.py
tests/: test_cdk_stack.py
